# iot_drive

./: .gitignore  CMakeLists.txt  readme.md
concrete/: CMakeLists.txt
concrete/include/: AMessage.hpp  AMessageResponse.hpp  ATaskArgs.hpp  CMakeLists.txt  Details.hpp  FileManager.hpp  IFileManager.hpp  IMinionProxy.hpp  IResponse.hpp  MasterProxy.hpp  MinionManager.hpp  MinionProxy.hpp  MinionReadArgs.hpp  MinionReadCommand.hpp  MinionWriteArgs.hpp  MinionWriteCommand.hpp  NBD.hpp  NBDProxy.hpp  NBDReadArgs.hpp  NBDWriteArgs.hpp  ReadCommand.hpp  ReadMessageResponse.hpp  ReadMessageSend.hpp  ReadResponse.hpp  ResponseManager.hpp  Ticket.hpp  UID.hpp  WriteCommand.hpp  WriteMessageResponse.hpp  WriteMessageSend.hpp  WriteResponse.hpp
concrete/src/: AMessage.cpp  AMessageResponse.cpp  ATaskArgs.cpp  CMakeLists.txt  FileManager.cpp  MasterProxy.cpp  MinionManager.cpp  MinionProxy.cpp  MinionReadArgs.cpp  MinionReadCommand.cpp  MinionWriteArgs.cpp  MinionWriteCommand.cpp  NBD.cpp  NBDProxy.cpp  NBDReadArgs.cpp  NBDWriteArgs.cpp  ReadCommand.cpp  ReadMessageResponse.cpp  ReadMessageSend.cpp  ReadResponse.cpp  ResponseManager.cpp  Ticket.cpp  UID.cpp  WriteCommand.cpp  WriteMessageResponse.cpp  WriteMessageSend.cpp  WriteResponse.cpp
concrete/test/: AMessageTest.cpp  CMakeLists.txt  FileCreator.cpp  Minion.cpp  test_macros.h
framework/: CMakeLists.txt
framework/include/: ASyncInjection.hpp  CMakeLists.txt  DLLLoader.hpp  DirMonitor.hpp  Dispatcher.hpp  FW_TPTask.hpp  Factory.hpp  Framework.hpp  Handleton.hpp  ICommand.hpp  IInputProxy.hpp  IListener.hpp  ISchedulerTask.hpp  ITPTask.hpp  ITaskArgs.hpp  LinuxListener.hpp  Logger.hpp  Reactor.hpp  Scheduler.hpp  Singleton.hpp  Socket.hpp  TCP_Connect.hpp  TCP_Listener.hpp  TPTask.hpp  ThreadPool.hpp  TimedTask.hpp  UDP_socket.hpp  WaitableQueue.hpp  WaitableQueueContainer.hpp
framework/src/: ASyncInjection.cpp  CMakeLists.txt  DLLLoader.cpp  DirMonitor.cpp  FW_TPTask.cpp  Framework.cpp  Handleton.cpp  LinuxListener.cpp  Logger.cpp  Reactor.cpp  Scheduler.cpp  Socket.cpp  TCP_Connect.cpp  TCP_Listener.cpp  ThreadPool.cpp  UDP_socket.cpp
framework/test/: ASyncInjectionTest.cpp  CMakeLists.txt  DLLLoaderTest.cpp  DirMonitorTest.cpp  DispatcherTest.cpp  FWPluginTest.cpp  FactoryTest.cpp  Handletondll1.cpp  Handletondll2.cpp  LoggerTest.cpp  Master.cpp  ReactorTest.cpp  SchedulerTest.cpp  SingletonTest.cpp  TP_Test.cpp  WaitableQueueTest.cpp  handleton_test.cpp
